--- a/docs/101-200/169. Majority Element.md
+++ b/docs/101-200/169. Majority Element.md
@@ -1,5 +1,13 @@
 # 169. Majority Element
+
+<img src="https://img.shields.io/badge/Array-5CB85C.svg?style=flat-square" alt="Array"/>
+<img src="https://img.shields.io/badge/Hash Table-F0AD4E.svg?style=flat-square" alt="Hash Table"/>
+<img src="https://img.shields.io/badge/Divide and Conquer
+-D9534F.svg?style=flat-square" alt="Divide and Conquer" />
+<img src="https://img.shields.io/badge/Counting-2b5f75.svg?style=flat-square" alt="Counting" />
+
 [🔗 **Source**](https://leetcode.com/problems/majority-element/)
+
 ## Intuition
 <!-- Describe your first thoughts on how to solve this problem. -->
 
