--- a/docs/1-100/11. Container With Most Water.md
+++ b/docs/1-100/11. Container With Most Water.md
@@ -1,20 +1,57 @@
 # 11. Container With Most Water
-**Source:** [https://leetcode.com/problems/container-with-most-water/description/](https://leetcode.com/problems/container-with-most-water/description/)
+
+<img src="https://img.shields.io/badge/Array-5CB85C.svg?style=flat-square" alt=""/>
+<img src="https://img.shields.io/badge/Sliding Window-F0AD4E.svg?style=flat-square" alt=""/>
+
+[🔗 **Source:**](https://leetcode.com/problems/container-with-most-water/description/)
 
 ## Intuition
-<!-- Describe your first thoughts on how to solve this problem. -->
-
+Give a list of number, find maximum volumn between two entries given that 
+$$
+\text{Volumn} = \min(\text{nums}[i],\text{nums}[j]) \times (j - i)
+$$
+for $0 \le i < j < \text{len}$
 ## Approach
-<!-- Describe your approach to solving the problem. -->
+Use Sliding Windows approach.
+
+- Step 1:
+    - creat two pointer `low` and `high` pointing to the start and end position of the given array.
+    - creat variable `max` to store the max value we ever get and keep updating max during loop iteration.
+- Step 2: During loop iteration, 
+    - If `height[low] < height[high]`, move `low` pointer until current height is less than or equal to `height[low]`.
+    - If `height[low] >= height[high]`, move `high` pointer until current height is less than or equal to `height[height]`.
+- Hence, in every loop, we will get a higher height than the previous one. The loop iteration ends when two pointer encounters. Finally, we return the maximum value of volumn we get during iteration.
 
 ## Complexity
-- Time complexity:
-<!-- Add your time complexity here, e.g. $$O(n)$$ -->
-
-- Space complexity:
-<!-- Add your space complexity here, e.g. $$O(n)$$ -->
+- Time complexity: $O(n)$
+- Space complexity: $O(1)$
 
 ## Code
 ``` java linenums="1"
-
+class Solution {
+    public int maxArea(int[] height) {
+        int low = 0;
+        int high = height.length - 1;
+        int volumn = 0;
+        int h = 0;
+        while (low < high) {
+            h = Math.min(height[low], height[high]);
+            volumn = Math.max(h * (high - low), volumn);
+            if (height[low] < height[high]) {
+                low++;
+                while(low < high && h > height[low]) { 
+                    low++;
+                }
+                h = height[low];
+            } else {
+                high--;
+                while(low < high && h > height[high]) { 
+                    high--;
+                }
+                h = height[high];
+            }
+        }
+        return volumn;
+    }
+}
 ```
