--- a/docs/401-500/417. Pacific Atlantic Water Flow.md
+++ b/docs/401-500/417. Pacific Atlantic Water Flow.md
@@ -9,14 +9,20 @@
 [🔗 **Source**](https://leetcode.com/problems/pacific-atlantic-water-flow/description/)
 
 ## Intuition
-<!-- Describe your first thoughts on how to solve this problem. -->
+Giving you a 2-d metrix, you need to find all entries on the path to the "edge" of this metrix
 
 ## Approach
-<!-- Describe your approach to solving the problem. -->
+Perform DFS on every entry on the edge of the metrix. And traverse the metrix to find all visited entries.
+
+- Firstly, we creat a Pacific visited metrix and an Atlantic visit metrix.
+- Secondly, we perform dfs on each edge and update our two visit metrices. 
+    - For entries where water is able to flow to the Pacific Ocean, perform DFS on each entry of the top and left side.
+    - For entries where water is able to flow to the Atlantic Ocean, perform DFS on each entry of the bottom and right side.
+- After we update our two visit metrices, we traverse them at same time to find entries whose rain water can flow to both the Pacific and Atlantic oceans.
 
 ## Complexity
-- Time complexity: $$
-- Space complexity: $$
+- Time complexity: $O(R\times C)$, where $R$ is the number of rows and $C$ is the number of columns
+- Space complexity: $O(R\times C)$, as we creat two visit metrices.
 
 ## Code
 ``` java linenums="1"
