--- a/docs/101-200/152. Maximum Product Subarray.md
+++ b/docs/101-200/152. Maximum Product Subarray.md
@@ -1,5 +1,5 @@
 # 152. Maximum Product Subarray
-**Source:** [https://leetcode.com/problems/maximum-product-subarray/description/](https://leetcode.com/problems/maximum-product-subarray/description/)
+**Source** [https://leetcode.com/problems/maximum-product-subarray/description/](https://leetcode.com/problems/maximum-product-subarray/description/)
 
 ## Intuition
 <!-- Describe your first thoughts on how to solve this problem. -->
