--- a/docs/1-100/33. Search in Rotated Sorted Array.md
+++ b/docs/1-100/33. Search in Rotated Sorted Array.md
@@ -1,20 +1,51 @@
 # 33. Search in Rotated Sorted Array
 **Source:** [https://leetcode.com/problems/search-in-rotated-sorted-array/description/](https://leetcode.com/problems/search-in-rotated-sorted-array/description/)
 
-## Intuition
-<!-- Describe your first thoughts on how to solve this problem. -->
-
 ## Approach
-<!-- Describe your approach to solving the problem. -->
+Search in the rotated sorted array, we need to decide our search range, like binary search. 
+We first define reverse point be the entry where 
+
+$$a[i - 1] > a[i] \text{ and } a[i + 1] > a[i]$$ 
+
+- If `nums[low] <= nums[mid]`
+
+- If `nums[low] > nums[mid]`, the reverse point lie in the range.
 
 ## Complexity
-- Time complexity:
-<!-- Add your time complexity here, e.g. $$O(n)$$ -->
-
-- Space complexity:
-<!-- Add your space complexity here, e.g. $$O(n)$$ -->
-
+- Time complexity: $O(\log n)$
+- Space complexity: $O(1)$
 ## Code
 ``` java linenums="1"
+class Solution {
+    public int search(int[] nums, int target) {
+        if (nums.length == 1) {
+            return nums[0] == target ? 0 : -1;
+        }
 
+        int low = 0; 
+        int high = nums.length - 1;
+        while (low <= high) {
+            int mid = (low + high) / 2;
+            if (nums[mid] == target) {
+                return mid;
+            }
+
+            if (nums[low] <= nums[mid]) {
+                if (nums[low] <= target && target < nums[mid]) {
+                    high = mid - 1;
+                } else {
+                    low = mid + 1;
+                }
+            } else {
+                if (nums[mid] < target && target <= nums[high]) {
+                    low = mid + 1;
+                } else {
+                    high = mid - 1;
+                }
+            }
+            // mid = (low + high) / 2;
+        }
+        return -1;
+    }
+}
 ```
