--- a/docs/1-100/53. Maximum Subarray.md
+++ b/docs/1-100/53. Maximum Subarray.md
@@ -16,5 +16,21 @@
 
 ## Code
 ``` java linenums="1"
-
+class Solution {
+    public int maxSubArray(int[] nums) {
+        int n = nums.length;
+        int[] res = new int[n];
+        int max = nums[0];
+        res[0] = nums[0];
+        for (int i = 1; i < nums.length; i++) {
+            if (res[i - 1] < 0) {
+                res[i] = nums[i];
+            } else {
+                res[i] = res[i - 1] + nums[i];
+            }
+            max = Math.max(max, res[i]);
+        }
+        return max;
+    }
+}
 ```
