--- a/docs/1+/42. Trapping Rain Water.md
+++ b/docs/1+/42. Trapping Rain Water.md
@@ -84,3 +84,7 @@ class Solution {
     }
 }
 ```
+
+### Similar Question
+
+- [Trapping Rain Water II](../400+/407.%20Trapping%20Rain%20Water%20II.md)
